# uploadly

./: Cargo.toml  Dockerfile
.github/workflows/: docker-image.yml
src/: database.rs  datastructures.rs  macromine.rs  main.rs
