[package]
name = "uploadly"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
bson = "2.5.0"
chrono = { version = "0.4", features = ["serde"] }
glob = "0.3.1"
jsonwebtoken = "8.2.0"
mongodb = "2.3.1"
rand = "0.8.5"
rust-argon2 = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.91"
syn = "1.0.107"
env_logger = "0.10.0"
dotenv = "0.15.0"
futures = "0.3.25"
actix-service = "2.0.2"
redis = "0.22.3"
tokio = "1.25.0"
aws-sdk-s3 = "0.24.0"
smartcore = {version = "0.2.1", features=["serde"]}
actix-multipart = "0.5.0"
aws-region = "0.25.1"
rusoto_s3 = "0.48.0"
rusoto_core = "0.48.0"
